Change date-titles to proper holidays
This also makes the holiday table configurable.